RD | footer whitespace issue

--- a/ucsd/styles/header-footer.css
+++ b/ucsd/styles/header-footer.css
@@ -1,3 +1,8 @@
+/*solves footer whitespace issue*/
+html, html body{
+    background: #134052;
+}
+
 #header
 {
 }
